# simple-calculator

./: CMakeLists.txt  README.md
include/: SimpleCalculator.hpp
src/: SimpleCalculator.cpp  main.cpp
